--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "vuepress": "^1.5.2",
+    "vuepress-theme-reco": "^1.5.5",
     "watchpack": "^1.6.1"
   }
 }
