--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "license": "ISC",
   "devDependencies": {
     "vuepress": "^1.5.2",
+    "vuepress-plugin-one-click-copy": "^1.0.2",
     "vuepress-theme-reco": "^1.5.5",
     "watchpack": "^1.6.1"
+  },
+  "dependencies": {
+    "vuepress-plugin-code-copy": "^1.0.6"
   }
 }
