--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
         uses: grasilife/github-pages-deploy-action@master
         env:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: master
+          BASE_BRANCH: master
+          BRANCH: gh-pages
           FOLDER: docs/.vuepress/dist
           BUILD_SCRIPT: npm install && npm run build
