--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "vuepress": "^1.5.2",
     "vuepress-plugin-one-click-copy": "^1.0.2",
-    "vuepress-theme-reco": "^1.6.1",
+    "vuepress-theme-reco": "1.6.1",
     "watchpack": "^1.6.1",
     "axios": ">=0.21.1"
   },
