--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "vuepress": "^1.5.2",
+    "vuepress": "^1.8.1",
     "vuepress-plugin-one-click-copy": "^1.0.2",
-    "vuepress-theme-reco": "1.6.1",
-    "watchpack": "^1.6.1",
-    "axios": ">=0.21.1"
+    "vuepress-theme-reco": "1.6.6"
   },
   "dependencies": {
     "vuepress-plugin-code-copy": "^1.0.6"
